# ALEX

./: .gitignore  CMakeLists.txt
includes/rapidjson/: allocators.h  document.h  memorybuffer.h  pointer.h  reader.h  schema.h  stringbuffer.h  uri.h  writer.h
includes/rapidjson/error/: error.h
includes/rapidjson/internal/: biginteger.h  clzll.h  diyfp.h  ieee754.h  itoa.h  meta.h  pow10.h  regex.h  stack.h  strfunc.h  swap.h
mytest/: test1.cpp  test1.h
src/benchmark/: main.cpp  main_b_plus.cpp  main_json.cpp  main_json_b_plus.cpp
src/core/: alex_base.h
test/: unittest_alex.h  unittest_nodes.h
